Trabajando con logs y haciendo modular a Debug y Produccion

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
+DEBUG=true
+
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=cursophp
 DB_USER=homestead
 DB_PASS=secret
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=
+SMTP_PASS=
