--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,7 +10,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # Si [%] el archivo que se pide [(REQUEST_FILENAME)] No [!] existe o no es un archivo [-f]
 RewriteCond %{REQUEST_FILENAME} !-f
 
-# Todo lo que venga irá a index.php
+# T/odo lo que venga irá a index.php
 # [QSA] = toma todos los parámetros pasados por GET, y los incluye en la redirección. También combina parámetros de la url original con la nueva.
 # Ej:
 # url original: hola.com/index.php?var=val
