--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "filp/whoops": "^2.3",
     "franzl/whoops-middleware": "^1.1",
     "monolog/monolog": "^1.24",
-    "robmorgan/phinx": "^0.10.7"
+    "robmorgan/phinx": "^0.10.7",
+    "symfony/console": "^4.3"
   }
 }
