Agregando funcionalidad de envio de correos

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,13 @@
+DEBUG=TRUE_OR_FALSE
+
+DB_DRIVER=YOUR_DRIVER_DB
 DB_HOST=YOUR_HOST
+DB_PORT=YOUR_PORT
 DB_NAME=YOUR_DATABASE
 DB_USER=YOUR_USER
 DB_PASS=YOUR_PASS
+
+SMTP_HOST=YOUR_HOST_SMTP
+SMTP_PORT=YOUR_PORT_SMTP
+SMTP_USER=YOUR_USER_SMTP
+SMTP_PASS=YOUR_PASS_SMTP
