--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Enviroment
+.env
 
 # Created by https://www.gitignore.io/api/phpstorm+all,jetbrains+all
 # Edit at https://www.gitignore.io/?templates=phpstorm+all,jetbrains+all
@@ -149,12 +151,6 @@ modules.xml
 ### Composer ###
 composer.phar
 /vendor/
-
-### Enviroment ###
-#.env
-
-### Recursos de pruebas ###
-/public/uploads/*
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
