--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "franzl/whoops-middleware": "^1.1",
     "monolog/monolog": "^1.24",
     "robmorgan/phinx": "^0.10.7",
-    "symfony/console": "^4.3"
+    "symfony/console": "^4.3",
+    "swiftmailer/swiftmailer": "^6.0"
   }
 }
